--- a/Tools-Supplies/nbproject/project.properties
+++ b/Tools-Supplies/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.ojdbc8.jar=C:\\Users\\crist\\OneDrive\\Escritorio\\oracle\\jdbc\\
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
