--- a/Tools-Supplies/nbproject/project.properties
+++ b/Tools-Supplies/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Tools-Supplies
+application.vendor=Nacho
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,23 @@ dist.jar=${dist.dir}/Tools-Supplies.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tools-Supplies
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-12.6\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.itext5-itextpdf-5.5.12.jar=src\\conector\\itext5-itextpdf-5.5.12.jar
+file.reference.itext5-itextpdf-5.5.12.jar-1=C:\\Users\\Nacho\\Desktop\\SistemaDeventas1\\src\\conector\\itext5-itextpdf-5.5.12.jar
+file.reference.jcalendar-1.4.jar=src\\conector\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Nacho\\Desktop\\SistemaDeventas1\\src\\conector\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Nacho\\Desktop\\SistemaDeventas1\\src\\conector\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +58,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
