--- a/Tools-Supplies/nbproject/project.properties
+++ b/Tools-Supplies/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
