--- a/Tools-Supplies/nbproject/project.properties
+++ b/Tools-Supplies/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.itext5-itextpdf-5.5.12.jar-1=C:\\Users\\Nacho\\Desktop\\SistemaDe
 file.reference.jcalendar-1.4.jar=src\\conector\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Nacho\\Desktop\\SistemaDeventas1\\src\\conector\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Nacho\\Desktop\\SistemaDeventas1\\src\\conector\\mysql-connector-java-5.1.46-bin.jar
+file.reference.ojdbc11.jar=src\\conector\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ojdbc11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
